[package]
name = "postgres_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
config = "0.13.3"
env_logger = "0.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio-postgres = { version = "0.7.11", features = ["with-uuid-1"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }