[package]
name = "postgres_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
dotenv = "0.15.0"
config = "0.13.3"
env_logger = "0.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio-postgres = { version = "0.7.11", features = ["with-uuid-1"] }
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }